SUBDIRS = src/navigation src/base src/datasources src/gauges src/main
EXTRA_DIST = doc fonts inidata
pkgdata_DATA = \
inidata/a320default.ini \
inidata/a320mcdu.ini \
inidata/a320mip.ini \
inidata/boeing737.ini \
inidata/boeing737fmc.ini \
fonts/CockpitMCDU.ttf \
fonts/CockpitScreens.ttf \
fonts/CockpitFonts_Licence.txt \
fonts/Vera.ttf \
fonts/Vera_Copyright.txt
