SUBDIRS = src/navigation src/base src/datasources src/gauges src/main
EXTRA_DIST = doc fonts inidata
pkgdata_DATA = \
inidata/a320default.ini \
inidata/a320mcdu.ini \
inidata/a320mip.ini \
inidata/boeing737clock.ini \
inidata/boeing737fmc.ini \
inidata/boeing737.ini \
inidata/boeing737mip.ini \
inidata/boeing737nav.ini \
inidata/boeing737pfd.ini \
inidata/boeing737cdu1.ini \
inidata/boeing737eicas.ini \
inidata/boeing737cdu2.ini \
inidata/boeing737fmc1.ini \
inidata/boeing737fmc2.ini \
inidata/default.ini \
fonts/CockpitMCDU.ttf \
fonts/CockpitScreens.ttf \
fonts/CockpitFonts_Licence.txt \
fonts/Vera.ttf \
fonts/Vera_Copyright.txt \
fonts/digital.ttf
